tests/paczka1/fuzzy1/75486898.err
Error in line 8: q1zEo0nk S679 70,9
Error in line 10: n6ulCL7Uzi3 A673 70,81
Error in line 13: 8RPa S679 203,5
Error in line 18: 8RPa A673 89,2
Error in line 19: n6ulCL7Uzi3 A673 265,0
Error in line 20: 8RPa A411 33,8
Error in line 25: 8RPa A166 42,2
Error in line 27: HNlMN8 A673 31,4
Error in line 28: Mc7 S679 48,7
